--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@
 
 baseURL = "https://valino123.github.io"
 languageCode = "en-us"
-defaultContentLanguage = "zh-cn"
+defaultContentLanguage = "en-us"
 title = "Hugo tranquilpeak theme"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "hugo-tranquilpeak-theme"
@@ -45,8 +45,8 @@ canonifyurls = true
 # ------
 [author]
   name = "Lenan Wu"
-  bio = "Super bio with markdown support **COOL**"
-  job = "Your job title"
+  bio = "a beginner"
+  job = "college student"
   location = "China"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
   gravatarEmail = "thibaud.lepretre@gmail.com"
