--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,9 @@ canonifyurls = true
   job = "college student"
   location = "China"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
-  gravatarEmail = "nolen15222@gmail.com"
+  #gravatarEmail = "nolen15222@gmail.com"
+  gravatarEmail = "Lauraarsons846@gmail.com"
+
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
   #picture = "https://cdn1.iconfinder.com/data/icons/ninja-things-1/1772/ninja-simple-512.png"
