--- a/config.toml
+++ b/config.toml
@@ -50,8 +50,8 @@ canonifyurls = true
   job = "college student"
   location = "China"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
-  #gravatarEmail = "nolen15222@gmail.com"
-  gravatarEmail = "Lauraarsons846@gmail.com"
+  gravatarEmail = "nolen15222@gmail.com"
+  #gravatarEmail = "Lauraarsons846@gmail.com"
 
   # Your profile picture
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
